# Agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: AGENT_GUIDE.md  BEGINNER_GUIDE.md  IMPROVEMENT_AUDIT.md  LATEST_AGENT_TODO.md
examples/: run_demo.py  sample_wafer.csv
semicon_agent/: __init__.py  __main__.py  cli.py  config.py  eval.py  models.py  self_check.py
semicon_agent/core/: __init__.py  agent.py  approval.py  artifacts.py  cancellation.py  errors.py  observability.py  policy.py  session.py  trace.py
semicon_agent/llm/: __init__.py  base.py  mock.py  open_model.py  privacy.py
semicon_agent/server/: __init__.py  __main__.py  api.py  auth.py  jobs.py
semicon_agent/tools/: __init__.py  base.py  registry.py  runtime.py  semiconductor.py  table_parser.py  validation.py
tests/: test_agent.py  test_config_artifacts_self_check.py  test_core_v2.py  test_eval.py  test_runtime_core.py  test_server_api.py  test_server_jobs.py  test_tools.py
