[project]
name = "semicon-agent"
version = "0.1.0"
description = "A Python agent framework for semiconductor data analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "openpyxl>=3.1",
]

[project.scripts]
semicon-agent = "semicon_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
