[project]
name = "semicon-agent"
version = "0.1.0"
description = "A Python agent framework for semiconductor data analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "openpyxl>=3.1",
    "fastapi>=0.116",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
]
web = [
    "fastapi>=0.116",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
]

[project.scripts]
semicon-agent = "semicon_agent.cli:main"
semicon-agent-server = "semicon_agent.server.__main__:main"
semicon-agent-check = "semicon_agent.self_check:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
